# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  sonar-project.properties
.github/workflows/: my-check.yml
page_analyzer/: __init__.py  app.py  repository.py  utils.py  validator.py
page_analyzer/static/: theme_switcher.js
page_analyzer/templates/: index.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/urls/: 404.html  index.html  layout.html  show_url.html  urls.html
