[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer - this is a full-fledged application based on the Flask framework. It works out the basic principles of building modern websites based on the MVC architecture: working with routing, query handlers and a template engine, interacting with a database."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
